--- a/app/views/pages/cadastro.ejs
+++ b/app/views/pages/cadastro.ejs
@@ -143,7 +143,7 @@
 
 <script>
 
-// $("#Telefone").mask("(99) 99999-99999")
+$("#Telefone").mask("(99) 99999-99999")
 
 // $("#data de nascimento").mask("99/99/9999")
 
