--- a/app/public/css/comunidade.css
+++ b/app/public/css/comunidade.css
@@ -326,6 +326,9 @@ p {
   left: 69px;
 }
 
+.AD{
+  color: none;
+}
 
 .melo {
   position: relative;
@@ -754,6 +757,10 @@ footer h4 {
       transform: translateX(-50%);
   }
   
+  .AD{
+    color: none;
+  }
+
   .nomezin {
     position: relative;
     background-color: #73539d;
@@ -1155,7 +1162,7 @@ footer h4 {
   
   }
 
-  @media (min-width:761px) and (max-width:900px ) {
+@media (min-width:761px) and (max-width:900px ) {
 
     body {
       font-family: Arial, sans-serif;
@@ -1469,6 +1476,10 @@ footer h4 {
       z-index: 1;
     }
     
+    .AD{
+      color: none;
+    }
+
     .coisa {
       position: relative;
       width: 293px;
