--- a/app/views/pages/premium.ejs
+++ b/app/views/pages/premium.ejs
@@ -50,7 +50,7 @@
                 <li> <img src="img/correto.svg"> Destaques nas áreas de pesquisa do site</li>
                 <li> <img src="img/correto.svg"> Boost de alcance na aba comunidade</li>
                 <li> <img src="img/correto.svg"> Prioridade na fila de espera do suporte</li>
-                <a href="https://pag.ae/7ZUsRKJg9" class="btn"<button class="btn">EU QUERO!</button></a>
+                <a href="https://pag.ae/7ZUsRKJg9" button class="btn">EU QUERO!</button></a>
             </ul>
 
             <div class="Premium2">
